# homework3

./: CMakeLists.txt  README.md  allocator_traits.cpp  logging_allocator.cpp  main.cpp  polymorphic_allocator.cpp  polymorphism.cpp
container/include/: container.h
hard_memory_allocator/: CMakeLists.txt
hard_memory_allocator/include/: hard_memory_allocator.h
hard_memory_allocator/src/: hard_memory_allocator.cpp
